# mineral

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: dflex.md  isaacgymenvs.md  rewarped.md
examples/: run.py
examples/agents/: __init__.py
examples/agents/myagent/: myagent.py
examples/cfgs/task/: MyEnv.yml
examples/envs/: __init__.py  myenv.py
mineral/agents/: __init__.py  actorcritic_base.py  agent.py  nets.py  template_agent.py
mineral/agents/bc/: bc.py  models.py
mineral/agents/ddpg/: ddpg.py  models.py  noise.py  schedule_util.py  utils.py
mineral/agents/diffrl/: bptt.py  models.py  shac.py  utils.py
mineral/agents/ppo/: dapg.py  experience.py  models.py  ppo.py  utils.py
mineral/agents/sac/: sac.py
mineral/buffers/: __init__.py  nstep_replay.py  simple_replay.py
mineral/cfgs/: config.yaml
mineral/cfgs/agent/: AllegroHandDDPG.yaml  AllegroHandPPO.yaml  AllegroHandSAC.yaml  CartpolePPO.yaml  DFlexAntSAC.yaml  DFlexAntSAPO.yaml  DFlexAntSHAC2.yaml  DroneParcourAgent.yaml  DroneParcourAgentPPO.yaml  DroneParcourAgentSAPO.yaml  DroneParcourAgentSHAC.yaml  PointNet.yaml  RewarpedJumperBPTT.yaml  RewarpedJumperPPO.yaml  RewarpedJumperSAC.yaml  RewarpedJumperSAPO.yaml  RewarpedJumperSHAC.yaml  RewarpedJumperSHAC2.yaml  WarpBearWalkerBPTT.yaml  WarpBearWalkerPPO.yaml  WarpBearWalkerSAC.yaml  WarpBearWalkerSAPO.yaml  WarpBearWalkerSH3.yaml  WarpBearWalkerSHAC.yaml  WarpBearWalkerSHAC2.yaml  dFlexAntBPTT.yaml  dFlexAntPPO.yaml  dFlexAntSAPO.yaml  dFlexAntSHAC.yaml  dFlexAntSHAC2.yaml
mineral/cfgs/task/: DFlex.yaml  Rewarped.yaml  WarpDrone.yaml  dFlex.yaml
mineral/cfgs/train/: CartpolePPO.yaml
mineral/common/: batch_env.py  metrics.py  metrics_tracker.py  normalizers.py  parallel.py  reward_shaper.py  running_mean_std.py  timer.py  tracker.py  worker.py  writer.py
mineral/envs/: __init__.py  dflex.py  isaacgymenvs.py  rewarped.py
mineral/nets/: __init__.py  _lambda.py  dist.py  distributions.py  mlp.py  multi_encoder.py
mineral/nets/cnn/: convnet.py
mineral/nets/pcd/: __init__.py  dp3.py  pcd_inputs.py  pointnet.py
mineral/ppo/: README.md
mineral/ppo/configs/: config.yaml
mineral/ppo/ppo/: experience.py  models.py  utils.py
mineral/scripts/: run.py  utils.py
(+2 files in other folders)
